Bug 482865 - As of plasma 6.0.1 (Arch just got this), keyboard shortcuts for next/previous screen do not work
Summary: As of plasma 6.0.1 (Arch just got this), keyboard shortcuts for next/previous...
Status: CLOSED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.0.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 484656 488140 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-08 12:22 UTC by ngoonee.talk
Modified: 2024-06-25 10:26 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ngoonee.talk 2024-03-08 12:22:28 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Upgrade to 6.0.1 (available in Arch)
2. Make sure the keyboard shortcut for KWin/Switch To Next Screen (or Previous screen) is set to something (I personally use Meta+I and Meta+U)
3. Press the key combination.

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Focus should switch to whatever window is on the next/previous screen. This used to work as of 6.0.0 and 5.x

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.0.1
(available in About System)
KDE Plasma Version:  6.0.1
KDE Frameworks Version:  6.0.0
Qt Version:  6.6.2

ADDITIONAL INFORMATION
The keyboard shortcuts for 'Move Window to Next Screen' and 'Move Window to Previous Screen' do work as they do previously. So I can use keyboard shortcuts to move a window to another screen, but not to shift focus to that window.
Comment 1 David Edmundson 2024-04-02 10:44:01 UTC
*** Bug 484902 has been marked as a duplicate of this bug. ***
Comment 2 fanzhuyifan 2024-04-11 17:09:57 UTC
*** Bug 484656 has been marked as a duplicate of this bug. ***
Comment 3 goo 2024-04-18 11:10:25 UTC
Writing this just to note that some sort of discussion is going on https://bugs.kde.org/show_bug.cgi?id=484902
Comment 4 Bug Janitor Service 2024-04-19 14:37:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5625
Comment 5 Zamundaaa 2024-04-29 14:24:34 UTC
Git commit 354a71855e04ee28311410e1b6d2a69cddcbcdbc by Xaver Hugl.
Committed on 29/04/2024 at 14:13.
Pushed by zamundaaa into branch 'master'.

workspace: unify active screen modes

Instead of the active screen being purely defined by the mouse position,
or purely defined by the active window and keyboard shortcuts, this changes
it to make the active screen all about the last user interaction. This should
work for most workflows without needing a setting to choose between two flawed
approaches.
Related: bug 484902, bug 484902

M  +0    -3    src/kwin.kcfg
M  +2    -0    src/main_x11.cpp
M  +0    -11   src/options.cpp
M  +0    -9    src/options.h
M  +1    -1    src/pointer_input.cpp
M  +1    -1    src/tablet_input.cpp
M  +1    -1    src/touch_input.cpp
M  +7    -34   src/useractions.cpp
M  +0    -31   src/workspace.cpp
M  +0    -3    src/workspace.h

https://invent.kde.org/plasma/kwin/-/commit/354a71855e04ee28311410e1b6d2a69cddcbcdbc
Comment 6 ngoonee.talk 2024-05-01 01:37:50 UTC
(In reply to Zamundaaa from comment #5)
> Git commit 354a71855e04ee28311410e1b6d2a69cddcbcdbc by Xaver Hugl.
> Committed on 29/04/2024 at 14:13.
> Pushed by zamundaaa into branch 'master'.
> 
> workspace: unify active screen modes
> 
> Instead of the active screen being purely defined by the mouse position,
> or purely defined by the active window and keyboard shortcuts, this changes
> it to make the active screen all about the last user interaction. This should
> work for most workflows without needing a setting to choose between two
> flawed
> approaches.
> Related: bug 484902, bug 484902
> 
> M  +0    -3    src/kwin.kcfg
> M  +2    -0    src/main_x11.cpp
> M  +0    -11   src/options.cpp
> M  +0    -9    src/options.h
> M  +1    -1    src/pointer_input.cpp
> M  +1    -1    src/tablet_input.cpp
> M  +1    -1    src/touch_input.cpp
> M  +7    -34   src/useractions.cpp
> M  +0    -31   src/workspace.cpp
> M  +0    -3    src/workspace.h
> 
> https://invent.kde.org/plasma/kwin/-/commit/
> 354a71855e04ee28311410e1b6d2a69cddcbcdbc

Not entirely sure whether/how this would solve the use case for using keyboards to change the active screen, but it would certainly fix the other oddity I've noticed with my graphics tablet, that it would randomly 'choose' a monitor and work based on that monitor rather than following the 'active screen'. Moving the mouse over, interacting with windows on the 'other' screen, would not change the graphics tablet focus.
Comment 7 jiri.stefka 2024-05-09 14:32:44 UTC
Hello,
I'm also experiencing these issues. The keyboard shortcuts no longer work, I have separate screen focus on and there's no notification of a misconfigured setting. I've tried using all the available Window Activation Policies but that didn't help either

From what it seems like the screen focus follows the mouse exclusively. When I have Firefox on display 1 and Konsole on display 2 when I hit alt tab it shows only Firefox if I'm on screen 1 (I configured task switcher to only show current screen). But when I move the mouse to display 2 and don't click so that Firefox is still focused (I can still interact with it using keyboard) the task switcher shows only Konsole - it switches the screen focus to display 2 when I still have a window on screen 1 focused.

So it looks like that the screen focus it exclusively tied to the mouse. If it's possible to make a script that would move the mouse between screens that could be a temporary solution until this problem is fixed.
Comment 8 Zamundaaa 2024-06-07 14:56:14 UTC
*** Bug 488140 has been marked as a duplicate of this bug. ***
Comment 9 ngoonee.talk 2024-06-25 01:07:09 UTC
In 6.1 commit 354a71 was merged, but it still does not seem possible to switch active screen with a keuyboard shortcut. Is this just not going to be possible anymore? In that case the possibility of setting the shortcut seems redundant and it should be removed.
Comment 10 goo 2024-06-25 10:26:58 UTC
(In reply to ngoonee.talk from comment #9)
> In 6.1 commit 354a71 was merged, but it still does not seem possible to
> switch active screen with a keuyboard shortcut. Is this just not going to be
> possible anymore? In that case the possibility of setting the shortcut seems
> redundant and it should be removed.

Did you put "ActiveMouseScreen=false" under the [Windows] group of kwinrc?
I believed that Plasma 6.1 didn't need it anymore, maybe this is not the case.