src/options.cpp
@@ -41,7 +41,6 @@ Options::Options(QObject *parent)
     , m_shadeHover(false)
     , m_shadeHoverInterval(0)
     , m_separateScreenFocus(false)
-    , m_activeMouseScreen(false)
     , m_placement(PlacementNone)
     , m_activationDesktopPolicy(Options::defaultActivationDesktopPolicy())
     , m_borderSnapZone(0)
@@ -246,15 +245,6 @@ void Options::setSeparateScreenFocus(bool separateScreenFocus)
     }
     m_separateScreenFocus = separateScreenFocus;
     Q_EMIT separateScreenFocusChanged(m_separateScreenFocus);
-}
-
-void Options::setActiveMouseScreen(bool activeMouseScreen)
-{
-    if (m_activeMouseScreen == activeMouseScreen) {
-        return;
-    }
-    m_activeMouseScreen = activeMouseScreen;
-    Q_EMIT activeMouseScreenChanged();
 }
 
 void Options::setPlacement(PlacementPolicy placement)
@@ -836,7 +826,6 @@ void Options::syncFromKcfgc()
     setFocusPolicy(m_settings->focusPolicy());
     setNextFocusPrefersMouse(m_settings->nextFocusPrefersMouse());
     setSeparateScreenFocus(m_settings->separateScreenFocus());
-    setActiveMouseScreen(m_settings->activeMouseScreen());
     setRollOverDesktops(m_settings->rollOverDesktops());
     setFocusStealingPreventionLevel(m_settings->focusStealingPreventionLevel());
     setActivationDesktopPolicy(m_settings->activationDesktopPolicy());
