src/tablet_input.cpp
@@ -70,7 +70,7 @@ void TabletInputRedirection::tabletToolEvent(KWin::InputRedirection::TabletEvent
     }
 
     update();
-    workspace()->setActiveCursorOutput(pos);
+    workspace()->setActiveOutput(pos);
 
     const auto button = m_tipDown ? Qt::LeftButton : Qt::NoButton;
 
