src/workspace.h
@@ -184,8 +184,6 @@ public:
     Output *activeOutput() const;
     void setActiveOutput(Output *output);
     void setActiveOutput(const QPointF &pos);
-    void setActiveCursorOutput(Output *output);
-    void setActiveCursorOutput(const QPointF &pos);
 
     /**
      * Returns the active window, i.e. the window that has the focus (or None
@@ -673,7 +671,6 @@ private:
 
     QList<Output *> m_outputs;
     Output *m_activeOutput = nullptr;
-    Output *m_activeCursorOutput = nullptr;
     QList<Output *> m_outputOrder;
 
     Window *m_activeWindow;
